add object & array

--- a/coding/language/javascript/基本语法.md
+++ b/coding/language/javascript/基本语法.md
@@ -23,12 +23,12 @@
 var a;
 ````
 
-- let 可变量，局部作用域，默认值undefined
+- let 可变量，局部作用域仅限let块，默认值undefined
 ````
 let a;
 ````
 
-- const 常量，局部作用域，默认值undefined
+- const 常量，局部作用域仅限const块，默认值undefined
 ````
 const a;
 ````
@@ -49,7 +49,7 @@ const a;
 - String  
   支持双引号、单引号和反向顿号
   
-一种复杂数据类型
+两种复杂数据类型
 - Object
 - Array
 
@@ -64,14 +64,14 @@ const a;
     
 - 赋值运算 
     - 等号(=)
-    - 等号(+=)
-    - 等号(-=)
-    - 等号(*=)
-    - 等号(/=) 
-    - 等号(%=) 
-    - 等号(<<=) 
-    - 等号(>>=) 
-    - 等号(>>>=) 
+    - 先加再赋值(+=)
+    - 先减再赋值(-=)
+    - 先乘再赋值(*=)
+    - 先除再赋值(/=) 
+    - 先模再赋值(%=) 
+    - 先左移再赋值(<<=) 
+    - 先有符号右移再赋值(>>=) 
+    - 先无符号右移再赋值(>>>=) 
     
 - 算数运算
     - 一元加(++)
